...
				}}
				renderQuickReplies={renderQuickReplies}
				onQuickReply={handleQuickReplySelection}
				disableComposer={isQuickReplies}
				showAvatarForEveryMessage={true}
				renderActions={renderActions}
				placeholder={isQuickReplies ? "Faites votre choix" : "Tapez un message"}
				showUserAvatar={true}
			/>
			{showCamera && (
				<View style={StyleSheet.absoluteFill}>
					<Camera
						onClose={handleCloseCamera}
...
