...
	},
	quickReplies: {
		type: "carousel",
		values: [
			{
				value: "formelle",
				title: "Formelle",
				description:
					"Une assistante personnelle, toujours prête à vous aider avec discrétion et efficacité.",
				image: FORMAL_URL,
				caption: "Professionnelle et efficace",
			},
			{
...
